# handlebars-cli

./: Cargo.toml  flake.nix  result
src/: main.rs
