[package]
name = "handlebars-cli"
description = "Template JSON properties into Handlebars templates from the CLI."
version = "1.0.0"
authors = ["Nathan Kleyn <nathan@nathankleyn.com>"]
edition = "2018"
license = "MIT"

[dependencies]
handlebars = "5.1.0"
serde_json = "1.0.41"
snafu = "0.8.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.1.0"
